--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+/* Geral */
+
 * {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -8,37 +11,68 @@
   --primary-color: #00856f;
   --headline: #212529;
   --paragraph: #495057;
+  --background: #dce9e2;
+  --brand-beige: #fffaf1;
+  --brand-green-light: #dce9e2;
+  --nav-height: 7.2rem;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+ul {
+  list-style: none;
 }
 
 body {
   font-family: "DM Sans";
   font-size: 1.6rem;
   text-align: center;
+  overflow: overlay;
+}
+
+.wrapper {
+  width: 37.5rem;
+  margin-inline: auto;
+  padding-inline: 2.4rem;
+}
+
+/* Header */
+
+header::before {
+  content: "";
+  width: 100%;
+  height: calc(108rem + var(--nav-height));
+  background-color: var(--background);
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 header {
-  width: 37.5rem;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 4.1rem;
-  padding: 0 2rem;
+  margin-top: calc(4.1rem + var(--nav-height));
 }
 
-h4 {
+header h4 {
   color: var(--primary-color);
   margin-bottom: 1.6rem;
   font-size: 1.4rem;
   font-weight: bold;
 }
 
-h1 {
+header h1 {
   font-size: 3.4rem;
   margin-bottom: 2.4rem;
   line-height: 130%;
   color: var(--headline);
 }
 
-p {
+header p {
   margin-bottom: 3.2rem;
   font-size: 1.8rem;
   line-height: 150%;
@@ -46,7 +80,7 @@ p {
   color: var(--paragraph);
 }
 
-button {
+header button {
   align-items: center;
   border: none;
   border-radius: 4rem;
@@ -63,4 +97,165 @@ button {
   margin-left: auto;
   margin-bottom: 6rem;
   cursor: pointer;
+}
+
+header img {
+  display: block;
+  margin-inline: auto;
+  object-position: 0 2rem;
+  width: 26.4rem;
+}
+
+.stats {
+  width: 32.7;
+  padding-block: 4rem;
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: var(--brand-beige);
+  gap: 6rem;
+  border-radius: 0.6rem;
+  border: 1px solid var(--background);
+  margin-inline: auto;
+}
+
+.stat h3 {
+  font-size: 4.3rem;
+  line-height: 130%;
+  margin-bottom: 0.4rem;
+  color: var(--headline);
+}
+
+.stat p {
+  margin: 0;
+  font-size: 1.6rem;
+  line-height: 150%;
+  font-weight: 400;
+  color: var(--primary-color);
+}
+
+/* Navigation */
+
+nav {
+  display: flex;
+  position: fixed;
+  height: var(--nav-height);
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 1.6rem 2.4rem;
+}
+
+nav .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav.scroll {
+  background-color: var(--primary-color);
+  width: 100vw;
+}
+
+nav.scroll svg:nth-child(1) path {
+  fill: white;
+}
+
+nav.scroll button path {
+  stroke: white;
+}
+
+nav button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+/* Menu-expanded */
+
+body.menu-expanded > :not(nav) {
+  display: none;
+}
+
+.menu,
+.close-menu,
+body.menu-expanded .open-menu {
+  opacity: 0;
+  visibility: hidden;
+}
+
+body.menu-expanded .menu,
+body.menu-expanded .close-menu {
+  opacity: 1;
+  visibility: visible;
+}
+
+body.menu-expanded {
+  overflow: hidden;
+}
+
+body.menu-expanded .menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: var(--primary-color);
+  height: 100vh;
+  width: 100vw;
+  padding-top: var(--nav-height);
+}
+
+body.menu-expanded nav {
+  position: relative;
+}
+
+.menu ul:first-child {
+  display: flex;
+  flex-direction: column;
+  gap: 4.8rem;
+  margin-top: 6rem;
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 3.1rem;
+}
+
+.menu ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.menu .button {
+  display: inline-block;
+  background: #fff;
+  text-decoration: none;
+  color: var(--primary-color);
+  border-radius: 40rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  line-height: 2.3rem;
+  padding: 1.6rem 3.2rem;
+  margin-top: 4.8rem;
+  margin-bottom: 8rem;
+}
+
+.social-links {
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+  justify-content: center;
+}
+
+body.menu-expanded .logo,
+body.menu-expanded nav button {
+  position: relative;
+  z-index: 1;
+}
+
+body.menu-expanded .logo path {
+  fill: white;
+}
+
+body.menu-expanded button path {
+  stroke: white;
 }
