--- a/style.css
+++ b/style.css
@@ -8,14 +8,16 @@
 
 :root {
   font-size: 62.5%;
-  --primary-color: #00856f;
-  --headline: #212529;
-  --paragraph: #495057;
-  --background: #dce9e2;
-  --brand-beige: #fffaf1;
-  --brand-green-light: #dce9e2;
-  --bg-light: #f7f9f9;
-  --brand-green-hover: #00453a;
+  --hue: 190;
+  --primary-color: hsl(var(--hue), 100%, 26%);
+  --headline: hsl(210, 11%, 15%);
+  --paragraph: hsl(210, 9%, 31%);
+  --background: hsl(calc(var(--hue) - 22), 23%, 89%);
+  --brand-beige: hsl(39, 100%, 97%);
+  --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%);
+  --brand-light-2: hsl(calc(var(--hue) + 10), 23%, 89%);
+  --bg-light: hsl(180, 14%, 97%);
+  --brand-dark: hsl(var(--hue), 100%, 14%);
   --nav-height: 7.2rem;
 }
 
@@ -91,14 +93,39 @@ section .content p {
 }
 
 .button:hover {
-  background-color: var(--brand-green-hover);
+  background-color: var(--brand-dark);
 }
 
-.social-links{
+.social-links {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 3.2rem;
+}
+
+/* Custom colors */
+
+#services .card circle {
+  fill: var(--brand-light);
+}
+
+#navigation .logo path[fill*="00856F"],
+#backToTopButton circle {
+  fill: var(--primary-color);
+}
+
+body.menu-expanded #navigation .logo path,
+#navigation.scroll .logo path {
+  fill: white;
+}
+
+button.open-menu path[stroke*="00856F"],
+#contact li path {
+  stroke: var(--primary-color);
+}
+
+#navigation.scroll button.open-menu path[stroke*="00856F"] {
+  stroke: white;
 }
 
 body {
@@ -110,7 +137,7 @@ body {
 }
 
 .wrapper {
-  width: 37.5rem;
+  width: min(50rem, 100%);
   margin-inline: auto;
   padding-inline: 2.4rem;
 }
@@ -127,6 +154,11 @@ nav {
   z-index: 100;
 }
 
+nav .menu,
+nav .close-menu {
+  position: fixed;
+}
+
 nav .wrapper {
   display: flex;
   align-items: center;
@@ -135,14 +167,6 @@ nav .wrapper {
 
 nav.scroll {
   background-color: var(--primary-color);
-}
-
-nav.scroll .logo path {
-  fill: white;
-}
-
-nav.scroll button path {
-  stroke: white;
 }
 
 nav button {
@@ -175,7 +199,6 @@ body.menu-expanded {
 }
 
 body.menu-expanded .menu {
-  position: fixed;
   top: 0;
   left: 0;
   background: var(--primary-color);
@@ -223,6 +246,12 @@ body.menu-expanded nav {
   margin-bottom: 8rem;
 }
 
+.menu .button:hover {
+  background-color: var(--brand-dark);
+  color: #fff;
+  transition: 300ms;
+}
+
 .social-links {
   display: flex;
   align-items: center;
@@ -249,7 +278,7 @@ body.menu-expanded button path {
 #home::before {
   content: "";
   width: 100%;
-  height: calc(108rem + var(--nav-height));
+  height: calc(116% + var(--nav-height));
   background-color: var(--background);
   display: block;
   position: absolute;
@@ -259,6 +288,7 @@ body.menu-expanded button path {
 }
 
 #home {
+  padding-block: 0;
   padding-top: calc(4.1rem + var(--nav-height));
 }
 
@@ -282,7 +312,7 @@ body.menu-expanded button path {
 }
 
 #home .stats {
-  width: 32.7;
+  width: 100%;
   padding-block: 4rem;
   font-weight: 700;
   display: flex;
@@ -326,7 +356,7 @@ body.menu-expanded button path {
   padding: 2.4rem;
   text-align: left;
   background-color: #fff;
-  border: 1px solid var(--brand-green-light);
+  border: 1px solid var(--brand-light);
   border-radius: 0.6rem;
 }
 
@@ -404,8 +434,296 @@ footer p {
   margin-bottom: 3.2rem;
 }
 
-footer .social-links{
+footer .social-links {
   justify-content: flex-start;
 }
 
+/* Back to Back */
 
+#backToTopButton {
+  position: fixed;
+  bottom: 1rem;
+  right: 2.5rem;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(100%);
+  transition: 200ms;
+}
+
+#backToTopButton.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+/* Responsivo */
+
+@media (min-width: 1024px) {
+  /* Geral  */
+
+  body {
+    overflow: auto;
+  }
+
+  .wrapper {
+    width: min(112rem, 100%);
+    display: grid;
+  }
+
+  .col-a {
+    grid-area: A;
+  }
+
+  .col-b {
+    grid-area: B;
+  }
+
+  section {
+    padding-block: 16rem;
+  }
+
+  section header h2 {
+    font-size: 4rem;
+    line-height: 5.2rem;
+  }
+
+  /* Navigation */
+
+  /* Reset  */
+
+  nav#navigation .wrapper * {
+    margin: 0;
+    padding: 0;
+    visibility: initial;
+    display: initial;
+    opacity: initial;
+    flex-direction: initial;
+    position: initial;
+    font-size: initial;
+    transform: initial;
+    color: initial;
+    background-color: initial;
+    font-weight: initial;
+    filter: initial;
+  }
+
+  nav#navigation .close-menu,
+  nav#navigation .open-menu,
+  nav#navigation .social-links {
+    display: none;
+  }
+
+  nav#navigation .menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+  }
+
+  nav#navigation .menu ul:nth-child(1) {
+    display: flex;
+    gap: 3.2rem;
+  }
+
+  nav#navigation .menu ul li a {
+    color: var(--primary-color);
+    opacity: 0.7;
+  }
+
+  nav#navigation .menu a.button {
+    border: 1px solid var(--primary-color);
+    border-radius: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 2.4rem;
+    color: var(--primary-color);
+    font-size: 1.4rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: 200ms;
+  }
+
+  nav#navigation .menu a.button:hover {
+    background-color: var(--primary-color);
+    filter: brightness(1.3);
+    border: none;
+    color: white;
+  }
+
+  nav#navigation.scroll .menu a.button.active,
+  nav#navigation.scroll .menu a.button:hover {
+    background-color: var(--primary-color);
+    filter: brightness(1.3);
+    border: none;
+  }
+
+  nav#navigation.scroll .menu ul li a {
+    color: var(--brand-light-2);
+    opacity: 0.6;
+  }
+
+  nav#navigation.scroll .menu a.button {
+    border-color: white;
+    color: white;
+  }
+
+  nav#navigation .menu ul li a {
+    transition: opacity 0.4s;
+  }
+
+  nav#navigation .menu ul li a.active,
+  nav#navigation .menu ul li a:hover {
+    opacity: 1;
+    font-weight: 700;
+  }
+
+  nav#navigation .menu ul li a:after {
+    content: "";
+    width: 0;
+    height: 2px;
+    background-color: var(--primary-color);
+    display: flex;
+    transition: width 0.2s;
+    left: -0.5rem;
+    position: relative;
+    bottom: -2rem;
+  }
+  nav#navigation.scroll .menu ul li a:after {
+    background-color: white;
+  }
+
+  nav#navigation .menu ul li a.active::after,
+  nav#navigation .menu ul li a:hover::after {
+    padding-inline: 0.8rem;
+    width: 100%;
+  }
+
+  nav#navigation.scroll .menu ul li a.active,
+  nav#navigation.scroll .menu ul li a:hover {
+    opacity: 1;
+  }
+
+  /* Home  */
+
+  #home::before {
+    height: calc(96% - var(--nav-height));
+  }
+
+  #home {
+    padding-top: var(--nav-height);
+  }
+
+  #home .wrapper {
+    grid-template-columns: 60.5rem 1fr;
+    grid-template-areas:
+      "A B"
+      "C C";
+  }
+
+  #home .col-a {
+    text-align: left;
+    align-self: center;
+  }
+
+  #home h1 {
+    font-size: 5.2rem;
+  }
+
+  #home .content p {
+    font-size: 1.8rem;
+  }
+
+  #home .stats {
+    grid-area: C;
+    flex-direction: row;
+    padding: 6rem;
+    gap: 0;
+  }
+
+  #home .stats .stat + .stat {
+    border-left: 1px solid var(--primary-color);
+  }
+
+  #home .stats .stat {
+    flex: 1;
+  }
+
+  #home .button {
+    margin: 0;
+  }
+
+  #home img {
+    width: 42rem;
+  }
+
+  /* Services */
+
+  #services h2 {
+    width: 47rem;
+    margin-inline: auto;
+  }
+
+  #services .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+  }
+
+  #services .card {
+    width: 30%;
+    flex-grow: 1;
+  }
+
+  /* About */
+
+  #about .wrapper {
+    display: grid;
+    grid-template-columns: 48rem 1fr;
+    grid-template-areas: "B A";
+    gap: 6.7rem;
+  }
+
+  #about .col-a {
+    align-self: center;
+  }
+
+  #about .content p {
+    margin-bottom: 0;
+  }
+
+  /* Contact */
+
+  #contact .wrapper {
+    grid-template-columns: 1fr 57.5rem;
+    grid-template-areas: "A B";
+  }
+
+  #contact h2 {
+    width: 40.4rem;
+  }
+
+  /* Footer  */
+
+  footer {
+    padding-block: 8rem;
+  }
+
+  footer .wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "A B";
+  }
+
+  footer .col-a {
+    align-self: center;
+  }
+
+  footer .col-b {
+    align-self: center;
+    justify-self: flex-end;
+  }
+
+  footer p {
+    margin-bottom: 0;
+  }
+}
